Adicionando rota para atualizar clientes
